--- a/styles/main.css
+++ b/styles/main.css
@@ -396,22 +396,6 @@ th {
   padding: 0;
 }
 
-a:link {
-  color: #ff0000;
-}
-
-a:visited {
-  color: #00ff00;
-}
-
-a:hover {
-  color: #ff00ff;
-}
-
-a:active {
-  color: #0000ff;
-}
-
 /* Bourbon 			 */
 html {
   -webkit-box-sizing: border-box;
@@ -529,17 +513,7 @@ html {
 .two-face .two-face__right {
   position: relative;
   width: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .two-face .two-face__left {
@@ -555,6 +529,7 @@ html {
 @media screen and (max-width: 900px) {
   .two-face .two-face__left {
     text-align: center;
+    width: 100%;
   }
 }
 
@@ -574,12 +549,12 @@ html {
 }
 
 .two-face.separ {
-  margin-top: 40px;
+  margin-top: 110px;
 }
 
 .two-face.separ .two-face__left .two-face__content,
 .two-face.separ .two-face__right .two-face__content {
-  padding-top: 50px;
+  padding-top: 120px;
 }
 
 .two-face.separ .two-face__left .two-face__content:before,
@@ -587,6 +562,16 @@ html {
   font-family: 'regular', monospace;
   position: absolute;
   top: -8px;
+}
+
+@media screen and (max-width: 900px) {
+  .two-face.separ {
+    margin-top: 70px;
+  }
+  .two-face.separ .two-face__left .two-face__content,
+  .two-face.separ .two-face__right .two-face__content {
+    padding-top: 80px;
+  }
 }
 
 .two-face.separ .two-face__left .two-face__content:before {
@@ -661,6 +646,7 @@ article, aside, canvas, figure, figure img, figcaption, hgroup, footer, header, 
 
 .wrapper {
   overflow: hidden;
+  padding-bottom: 100px;
 }
 
 h1 {
@@ -1142,15 +1128,20 @@ i {
   padding-right: 0;
   padding-left: 0;
   width: 100%;
-  min-height: -webkit-calc(360px + (20px * 2.5));
-  min-height: calc(360px + (20px * 2.5));
-  -webkit-transition: min-height 0.3s ease-in-out;
-  transition: min-height 0.3s ease-in-out;
+  min-height: -webkit-calc(380px + (20px * 6));
+  min-height: calc(380px + (20px * 6));
+}
+
+.work .two-face__left .two-face__content .work__img-container::-webkit-scrollbar {
+  display: none;
+}
+
+.work .two-face__left .two-face__content .work__img-container::-moz-scrollbar {
+  display: none;
 }
 
 .work .two-face__left .two-face__content .work__img-container {
   padding-left: 20px;
-  padding-right: 20px;
   cursor: ew-resize;
   white-space: nowrap;
   position: absolute;
@@ -1165,19 +1156,15 @@ i {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-}
-
-.work .two-face__left .two-face__content .work__img-container ::-webkit-scrollbar {
-  display: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .work .two-face__left .two-face__content .work__img-container img {
   border: 10px solid #E5E5F9;
-  height: 360px;
+  height: 380px;
   margin-right: 20px;
   pointer-events: none;
-  -webkit-transition: height 0.3s ease-in-out;
-  transition: height 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 900px) {
@@ -1206,6 +1193,15 @@ i {
     height: inherit;
     margin-top: 10px;
     margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .scale-ok .max .work__img-container {
+    -webkit-transform: scale(1.45);
+            transform: scale(1.45);
+    z-index: 9999999;
+    padding-left: 35% !important;
   }
 }
 
